# sqlite-syntax

./: .gitignore  Keywords.hs  Lexer.hs  Lib.hs  TextParser.hs  sqlite-syntax.cabal
app/: DebugWatch.hs
sqlite-syntax-parser/src/Sqlite/Syntax/: Lexer.hs  Parser.hs  Token.hs
sqlite-syntax-parser/src/Sqlite/Syntax/Internal/: Error.hs
sqlite-syntax-parser/src/Sqlite/Syntax/Internal/Parser/: Utils.hs
sqlite-syntax-parser/src/Sqlite/Syntax/Internal/Parser/Rule/: Aliased.hs  AlterTableStatement.hs  AnalyzeStatement.hs  AttachStatement.hs  ColumnDefinition.hs  Columns.hs  CommonTableExpression.hs  CompoundSelect.hs  ConflictResolution.hs  CreateIndexStatement.hs  DeleteStatement.hs  ForeignKeyClause.hs  InsertStatement.hs  LiteralValue.hs  Ordering.hs  OrderingTerm.hs  QualifiedTableName.hs  Returning.hs  Select.hs  SelectCore.hs  SelectStatement.hs  Table.hs  Values.hs
sqlite-syntax-parser/src/Sqlite/Syntax/Parser/: Token.hs
sqlite-syntax-pretty/src/Sqlite/Syntax/: Pretty.hs
sqlite-syntax/src/Sqlite/: Syntax.hs
sqlite-syntax/src/Sqlite/Syntax/Internal/Type/: Aliased.hs  AlterTableStatement.hs  AnalyzeStatement.hs  AttachStatement.hs  ColumnDefinition.hs  Columns.hs  CommonTableExpressions.hs  CreateIndexStatement.hs  CreateTableStatement.hs  DeleteStatement.hs  Expression.hs  Expression.hs-boot  ForeignKeyClause.hs  IndexedColumn.hs  InsertStatement.hs  LiteralValue.hs  Namespaced.hs  OnConflict.hs  QualifiedTableName.hs  SelectStatement.hs  Statement.hs  TransactionType.hs  Values.hs  Window.hs
src/: TextParser.hs
src/Sqlite/: Syntax.hs
src/Sqlite/Syntax/: Lexer.hs  Parser.hs  Pretty.hs  Token.hs
src/Sqlite/Syntax/Internal/: Prelude.hs
src/Sqlite/Syntax/Internal/Parser/: Utils.hs
src/Sqlite/Syntax/Internal/Parser/Rule/: CommonTableExpression.hs  ForeignKeyClause.hs  FunctionCall.hs  IndexedColumn.hs  Namespaced.hs  Ordering.hs  OrderingTerm.hs  QualifiedTableName.hs  Table.hs
src/Sqlite/Syntax/Internal/Type/: Aliased.hs  CommonTableExpressions.hs-boot  Expression.hs  Expression.hs-boot  FilterClause.hs  ForeignKeyClause.hs  FunctionCall.hs  IndexedColumn.hs  LiteralValue.hs  Named.hs  Ordering.hs  OrderingTerm.hs  QualifiedTableName.hs  Returning.hs  SchemaQualified.hs  SelectStatement.hs  TableQualified.hs  Window.hs
src/Sqlite/Syntax/Parser/: Token.hs
test/: Gen.hs  LexerTests.hs  ParserTests.hs  Test.hs
test/files/out0/: aggerror.test_4.hs  alias.test_10.hs  alias.test_11.hs  alias.test_12.hs  alias.test_13.hs  alias.test_14.hs  alias.test_2.hs  alias.test_3.hs  alias.test_4.hs  alias.test_5.hs  alias.test_6.hs  alias.test_7.hs  alias.test_8.hs  alias.test_9.hs  alter.test_17.hs  alter.test_20.hs  alter.test_23.hs  alter.test_25.hs  alter.test_3.hs  alter.test_34.hs  alter.test_50.hs  alter.test_51.hs  alter.test_58.hs  alter.test_60.hs  alter.test_62.hs  alter.test_65.hs  alter2.test_10.hs  alter2.test_13.hs  alter2.test_18.hs  alter2.test_20.hs  alter2.test_22.hs  alter2.test_30.hs  alter2.test_37.hs  alter2.test_4.hs  alter2.test_40.hs  alter2.test_5.hs  alter2.test_6.hs  alter2.test_7.hs  alter3.test_25.hs  alter3.test_39.hs  (+8423 more)
