cabal-version: 2.4

name: sqlite-syntax
version: 0

common component
  build-depends:
    base,
    bytestring,
    containers,
    Earley,
    megaparsec,
    parser-combinators,
    text,
    unordered-containers,
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    UndecidableInstances
    ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: component
  exposed-modules:
    Sqlite.Syntax
    Sqlite.Syntax.Lexer
    Sqlite.Syntax.Parser
    Sqlite.Syntax.Token
  hs-source-dirs: src
  other-modules:
    Sqlite.Syntax.Internal.Prelude
    Sqlite.Syntax.Internal.Type.Expression
    Sqlite.Syntax.Internal.Type.FilterClause
    Sqlite.Syntax.Internal.Type.FunctionCall
    Sqlite.Syntax.Internal.Type.LiteralValue
    Sqlite.Syntax.Internal.Type.OrderingTerm
    Sqlite.Syntax.Internal.Type.QualifiedTableName
    Sqlite.Syntax.Internal.Type.SchemaQualified
    Sqlite.Syntax.Internal.Type.SelectStatement
    Sqlite.Syntax.Internal.Type.TableQualified
    Sqlite.Syntax.Parser.Token
    TextParser

test-suite tests
  import: component
  build-depends:
    hedgehog,
    sqlite-syntax,
  hs-source-dirs: test
  main-is: Test.hs
  other-modules:
    Gen
    LexerTests
    ParserTests
  type: exitcode-stdio-1.0
