cabal-version: 2.4

description: Sqlite 3.35.5
name: sqlite-syntax
version: 0

common component
  build-depends:
    base,
    bytestring,
    containers,
    Earley,
    megaparsec,
    parser-combinators,
    prettyprinter,
    text,
    unordered-containers,
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeOperators
    UndecidableInstances
    ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: component
  exposed-modules:
    Sqlite.Syntax
    Sqlite.Syntax.Lexer
    Sqlite.Syntax.Parser
    Sqlite.Syntax.Pretty
    Sqlite.Syntax.Token
  hs-source-dirs: src
  other-modules:
    Sqlite.Syntax.Internal.Parser.Rule.CommonTableExpression
    Sqlite.Syntax.Internal.Parser.Rule.ForeignKeyClause
    Sqlite.Syntax.Internal.Parser.Rule.FunctionCall
    Sqlite.Syntax.Internal.Parser.Rule.IndexedColumn
    Sqlite.Syntax.Internal.Parser.Rule.Namespaced
    Sqlite.Syntax.Internal.Parser.Rule.Ordering
    Sqlite.Syntax.Internal.Parser.Rule.OrderingTerm
    Sqlite.Syntax.Internal.Parser.Rule.Table
    Sqlite.Syntax.Internal.Parser.Utils
    Sqlite.Syntax.Internal.Type.Aliased
    Sqlite.Syntax.Internal.Type.CommonTableExpressions
    Sqlite.Syntax.Internal.Type.DeleteStatement
    Sqlite.Syntax.Internal.Type.Expression
    Sqlite.Syntax.Internal.Type.ForeignKeyClause
    Sqlite.Syntax.Internal.Type.FunctionCall
    Sqlite.Syntax.Internal.Type.IndexedColumn
    Sqlite.Syntax.Internal.Type.LiteralValue
    Sqlite.Syntax.Internal.Type.Named
    Sqlite.Syntax.Internal.Type.Namespaced
    Sqlite.Syntax.Internal.Type.Ordering
    Sqlite.Syntax.Internal.Type.OrderingTerm
    Sqlite.Syntax.Internal.Type.QualifiedTableName
    Sqlite.Syntax.Internal.Type.Returning
    Sqlite.Syntax.Internal.Type.SelectStatement
    Sqlite.Syntax.Internal.Type.Window
    Sqlite.Syntax.Parser.Token
    TextParser

test-suite tests
  import: component
  build-depends:
    directory,
    hedgehog,
    pretty-simple,
    sqlite-syntax,
  hs-source-dirs: test
  main-is: Test.hs
  other-modules:
    Gen
    LexerTests
    ParserTests
  type: exitcode-stdio-1.0
